--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=80 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:eb": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -36,3 +37,4 @@
     ]
   }
 }
+
