--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,10 @@ install:
   - npm install
 
 script:
+  - pwd
+  - ls -al
+  - ls -al /build
   - npm run build
   - zip -r -q build_artifact.zip build
+  - ls -al
 
-before_deploy:
-  - pip install --user awscli
-
-deploy:
-  provider: script
-  script:
-    - aws s3 cp build_artifact.zip s3://your-bucket-name/build_artifact.zip
-  skip_cleanup: true
-  on:
-    branch: main
