--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,14 @@ install:
 
 script:
   - npm run build
+  - zip -r -q travis_app.zip .
+
+before_deploy:
+  - pip install --user awscli 
+
+deploy:
+  provider: script
+  script: aws s3 cp /home/travis/build/maheshkaldhone/aws-portfolio/build_artifact.zip s3://travisdemobuilds
+  skip_cleanup: true
+  on:
+    branch: main
