--- a/.travis.yml
+++ b/.travis.yml
@@ -5,36 +5,50 @@ node_js:
 cache:
   directories:
     - node_modules
+    - build  # Cache the build folder to reuse across stages
 
 stages:
   - name: build
   - name: test
   - name: deploy
     if: branch = main 
-    
+
 jobs:
   include:
+    # Build Job
     - stage: build
+      name: "Build Application"
       script:
         - npm install
         - npm run build
-        - zip -r -q travis_app.zip .
+        - zip -r -q travis_app.zip .  # Create the ZIP file
+      before_cache:
+        - ls -al travis_app.zip  # Make sure the ZIP is listed in the logs for verification
+      cache:
+        directories:
+          - ./travis_app.zip  # Ensure the ZIP file is cached
 
+    # Linting Job (run in parallel, won't fail the stage)
     - stage: test
+      name: "Run Linting"
       script:
         - npm run lint || true
-       # - npm test
 
+    # Deploy Job (reuse the build artifact)
     - stage: deploy
+      name: "Deploy to Elastic Beanstalk"
       before_deploy:
+        # Reuse the cached build ZIP
+        - ls -al travis_app.zip  # Ensure the ZIP file is available
         - pip install --user awscli
       deploy:
-        - provider: elasticbeanstalk
-          region: "us-east-2"
-          app: "Travis-ci"
-          env: "Travis-ci-dev"
-          bucket_name: "travisdemobuilds"
-          bucket_path: "DEV"
-          skip_cleanup: true
-          on:
-            branch: main
+        provider: elasticbeanstalk
+        region: "us-east-2"
+        app: "Travis-ci"
+        env: "Travis-ci-dev"
+        bucket_name: "travisdemobuilds"
+        bucket_path: "DEV"
+        zip_file: travis_app.zip  # Deploy the same ZIP file created in the build stage
+        skip_cleanup: true
+      on:
+        branch: main
